--- a/style.css
+++ b/style.css
@@ -7,14 +7,15 @@
 display: block;
 clear: both;
 }
- @media screen and (max-width:425px) {
-main { wibth: 90%;
+main { width: 960px;
 	margin:50px auto;}
+.step-box secound{
+	margin: 0 30px 0 30px;
+}
 .step-box{
 	float: left;
-	width: 90%;
-	margin-right: 30px;
-	padding: 20px;
+	width: 300px;
+	padding: 10px;
 	position: relative;
 	border: 1px
 	solid: #eee;
@@ -44,4 +45,16 @@ background-position: bottom;
  background-color: #FF9A4B; 
  color: #fff;
  padding: 3px;
-}}
+}
+. title{margin: 15px 0 5px;}
+@media screen and ( max-width:768px) {
+	main{
+		width: 90%;
+		margin: 50px 0;
+	}
+	main .step-box{
+		width: 90%;
+		margin: 20px 0px;
+	}
+
+}
