--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ display: block;
 clear: both;
 }
 main { width: 960px;
-	margin:50px auto;}
+	margin: 0 auto;}
 .step-box secound{
 	margin: 0 30px 0 30px;
 }
@@ -22,6 +22,7 @@ main { width: 960px;
 }
 .step-box: last-child { margin-right: 0; }
 .step-img1 {
+
 height: 150px;
 background-image: url(img/flow01.png);
 background-size: cover;
@@ -50,11 +51,15 @@ background-position: bottom;
 @media screen and ( max-width:768px) {
 	main{
 		width: 90%;
-		margin: 50px 0;
+		margin: 40px auto;
+
 	}
 	main .step-box{
 		width: 90%;
-		margin: 20px 0px;
+		margin: 10px 0;
 	}
-
+	.step-box secound{
+		width: 90%:
+		margin: 0;
+	}
 }
